Fixed links to point to the new data server

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -13,47 +13,47 @@ that these do not include the various goodies that we work out on the board in
 class, so don't use this as an alternative to attending lecture! Please do not
 share these notes with anyone outside of the course.
 
-[Lecture 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec01_Biogeography_of_Oceanic_Islands.pdf) \| We begin our discussion of the biogeography in the context of  oceanic islands.
+[Lecture 1](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec01_Biogeography_of_Oceanic_Islands.pdf) \| We begin our discussion of the biogeography in the context of  oceanic islands.
 
-[Lecture 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec02_Biogeography_Pathogens.pdf) \| We finish up our puzzle of oceanic islands and examine biogeography in the context of microbial pathogens.
+[Lecture 2](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec02_Biogeography_Pathogens.pdf) \| We finish up our puzzle of oceanic islands and examine biogeography in the context of microbial pathogens.
 
-[Lecture 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec03_Biogeography_Pathogens_Continued.pdf) \| We conclude our discussion of biogeography by solving the puzzle of the 2010 Haitian cholera outbreak.
+[Lecture 3](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec03_Biogeography_Pathogens_Continued.pdf) \| We conclude our discussion of biogeography by solving the puzzle of the 2010 Haitian cholera outbreak.
 
-[Lecture 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec04_Trophic_Cascades.pdf) \| The concept of keystone species and trophic cascades are introduced, along with a brief description of the coming homework.
+[Lecture 4](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec04_Trophic_Cascades.pdf) \| The concept of keystone species and trophic cascades are introduced, along with a brief description of the coming homework.
 
-[Lecture 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec05_Fossil_Record.pdf) \| We give a brief history of dinosaurs and the fossil record and examine the limb-to-fin transition in the context of whales.
+[Lecture 5](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec05_Fossil_Record.pdf) \| We give a brief history of dinosaurs and the fossil record and examine the limb-to-fin transition in the context of whales.
 
-[Lecture 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec06_fossil_record_continued.pdf) \| We conclude our discussion of the fossil record
+[Lecture 6](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec06_fossil_record_continued.pdf) \| We conclude our discussion of the fossil record
 and examine the evolution of whales in the context of molecules and genes. We also briefly discuss the fin-to-limb transition and the transitional form *Tiktaalik*.
 
-[Lecture 7](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec07_facts_of_evolution.pdf) \| The facts of evolution.
+[Lecture 7](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec07_facts_of_evolution.pdf) \| The facts of evolution.
 
 
-[Lecture 8](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec08_pop_gen.pdf) \| We do a quick recap of the facts of evolution and discuss
+[Lecture 8](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec08_pop_gen.pdf) \| We do a quick recap of the facts of evolution and discuss
 the mathematics behind the idea of genetic drift.
 
-[Lecture 9](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec09_photosynthesis.pdf) \| In this lecture, we examine of turning light into biological material beginning from the quantum mechanics of light absorption through the generation of ATP.
+[Lecture 9](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec09_photosynthesis.pdf) \| In this lecture, we examine of turning light into biological material beginning from the quantum mechanics of light absorption through the generation of ATP.
 
-[Lecture 10](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec10_eating_sugar.pdf) \| These slides are basically supporting material to complement class which was largely interactive and done on the board.
+[Lecture 10](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec10_eating_sugar.pdf) \| These slides are basically supporting material to complement class which was largely interactive and done on the board.
 
-[Lecture 11 & 12](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec11-12_gene_regulation.pdf) \| We derive quantitative models of gene expression using our knowledge of mRNA production and degradation rates as well as through a statistical mechanical approach. The bulk of these lectures were performed on the blackboard.
+[Lecture 11 & 12](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec11-12_gene_regulation.pdf) \| We derive quantitative models of gene expression using our knowledge of mRNA production and degradation rates as well as through a statistical mechanical approach. The bulk of these lectures were performed on the blackboard.
 
-[Lectures 13 & 14](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec13-14_body_plan.pdf) \| We look at organismal development using *Drosophila melanogaster* as our model organism. Here, we tie together much of our discussion on diffusion with the positioning of the cephalic furrow via the Bicoid morphogen.
+[Lectures 13 & 14](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec13-14_body_plan.pdf) \| We look at organismal development using *Drosophila melanogaster* as our model organism. Here, we tie together much of our discussion on diffusion with the positioning of the cephalic furrow via the Bicoid morphogen.
 
-[Lecture 15 & 16](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec15-16_chemotaxis.pdf) \| We investigate how bacterial cells measure concentrations of molecules in their environment and control their directed motion. As with lectures 11 & 12, the bulk of this material was performed on the blackboard.
+[Lecture 15 & 16](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec15-16_chemotaxis.pdf) \| We investigate how bacterial cells measure concentrations of molecules in their environment and control their directed motion. As with lectures 11 & 12, the bulk of this material was performed on the blackboard.
 
 ## Recitation Notes
 Materials relevant to the recitations will be posted here as the course carries
 onward.
 
-[Recitation 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec02_central_dogma.pdf) \| This presentation has some interesting images to use for
+[Recitation 2](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec02_central_dogma.pdf) \| This presentation has some interesting images to use for
 making estimates about the central dogma and we introduce the problem of
-the reintroduction of wolves to Yellowstone National Park. [\[PDF notes\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec02_central_dogma_notes.pdf)[\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/yellowstone.zip)[ \[paper\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Goldberg2014.pdf)
+the reintroduction of wolves to Yellowstone National Park. [\[PDF notes\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec02_central_dogma_notes.pdf)[\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/yellowstone.zip)[ \[paper\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/Goldberg2014.pdf)
 
 
-[Recitation 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec03_deep_time.pdf) \| This presentation has some details about deep time along with some fun order-of-magnitude estimates to understand how genetic information changes with time. [\[PDF notes\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec03_deep_time_notes.pdf)
+[Recitation 3](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec03_deep_time.pdf) \| This presentation has some details about deep time along with some fun order-of-magnitude estimates to understand how genetic information changes with time. [\[PDF notes\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec03_deep_time_notes.pdf)
 
-[Recitation 5](http://www.rpgroup.caltech.edu/bi1_2017/protected/Bi1_Sp2017_rec05_photosynthesis.pdf) \| These slides cover the principles of photosynthesis in a little more depth along with some fun estimates.
+[Recitation 5](http://rpdata.caltech.edu/bi1_2017/protected/Bi1_Sp2017_rec05_photosynthesis.pdf) \| These slides cover the principles of photosynthesis in a little more depth along with some fun estimates.
 
 ## In-Class Readings
 
@@ -66,7 +66,7 @@ Readings mentioned specifically in class will be listed here as the course progr
 <span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
 
 {% for p in week[1] %}
-{% assign dir = "http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/" %}
+{% assign dir = "http://rpdata.caltech.edu/courses/bi1_2017/protected/" %}
 {% if p.link != None %}
 {% assign dir = p.link %}
 [{{ p.title }}]({{ p.link }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
