--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -12,21 +12,21 @@ permalink: syllabus
 | Week | Date | Topic | Homework |
 | -- | -- | -- | -- |
 | 1 | Tuesday, April 4 | How did amphibians get on the islands 200 miles off the coast of West Africa?| |
-| 1 | Thursday, April 6 | Finishing up biogeography of oceanic islands and beginning our discussion of the 2010 Haitian cholera outbreak. | [Homework 1 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf) |
+| 1 | Thursday, April 6 | Finishing up biogeography of oceanic islands and beginning our discussion of the 2010 Haitian cholera outbreak. | [Homework 1 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf) |
 | 2 | Tuesday, April 11 | We conclude our exploration of biogeography and the 2010 Haitian cholera outbreak. | |
-| 2 | Thursday, April 13 | We discuss the role of predators in ecosystems through trophic cascades.| [Homework 2 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf), Homework 1 Due |
+| 2 | Thursday, April 13 | We discuss the role of predators in ecosystems through trophic cascades.| [Homework 2 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf), Homework 1 Due |
 | 3 | Tuesday, April 18 | We begin our discussion of the evolution of whales and examine the perfections of the fossil record. | |
-| 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | [Homework 3 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf), Homework 2 Due |
+| 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | [Homework 3 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf), Homework 2 Due |
 | 4 | Tuesday, April 25 | The key facts of evolution and how we know how about them: variation, heritability, the forces of evolution. | |
-| 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | [Homework 4 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf), Homework 3 Due |
+| 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | [Homework 4 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf), Homework 3 Due |
 | 5 | Tuesday, May 2 | Photosynthesis and eating the sun. | |
-| 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | [Homework 5 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf), Homework 4 Due |
+| 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | [Homework 5 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf), Homework 4 Due |
 | 6 | Tuesday, May 9 | The mathematics of genetic regulation - Part 1. | |
-| 6 | Thursday, May 11 | The mathematics of genetic regulation - Part 2. | [Homework 6 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf), Homework 5 Due |
+| 6 | Thursday, May 11 | The mathematics of genetic regulation - Part 2. | [Homework 6 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf), Homework 5 Due |
 | 7 | Tuesday, May 16 |  How do you build a fly? A detailed dissection of the basics of *Drosophila* morphogenesis. | |
-| 7 | Thursday, May 18 | DNA Packaging - How do cells organize their meter long genome? | [Homework 7 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf), Homework 6 Due |
+| 7 | Thursday, May 18 | DNA Packaging - How do cells organize their meter long genome? | [Homework 7 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf), Homework 6 Due |
 | 8 | Tuesday, May 23 | How do cells sense? We discuss the physical limits of chemical detection. | |
-| 8 | Thursday, May 25 | Probability as the language of biology.| [Homework 8 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf) Homework 7 Due |
+| 8 | Thursday, May 25 | Probability as the language of biology.| [Homework 8 Released](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf) Homework 7 Due |
 | 9 | Tuesday, May 30 |  Physical limits to how cells and organisms detect stimuli from the world around them. | |
 | 9 | Thursday, June 1 | Special topics in modern biology. | Homework 9 Released, Homework 8 Due |
 | 10 | Tuesday, June 6 | Probability as the language of biology. What distributions should you change your life for? | |
