--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -18,20 +18,20 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 * [Tutorial 0c: A Primer on Python Syntax]({{ site.baseurl }}/code/t0c_python_syntax_and_plotting.html) \| This tutorial will walk you through the basics of programming in Python.
 
-* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[data set]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/mabuya_atlantica.zip)
+* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[data set]](http://rpdata.caltech.edu/courses/bi1_2017/data/mabuya_atlantica.zip)
 
 * [Tutorial 2: Numerical Integration]({{ site.baseurl }}/code/t02_numerical_integration.html) \| Here, you will learn how to write your own Forward-Euler numerical integrator to  investigate radioactive decay.
 
 * [Tutorial 3: Stochastic Simulations]({{ site.baseurl }}/code/t03_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift.
 }}
 
-* [Tutorial 4: Quantitative Image Processing]({{ site.baseurl }}/code/t04_quantitative_image_processing.html) \| In this tutorial, you will learn some principles of computational image processing and more details about how we experimentally test our predictions regarding the fold-change in gene expression. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ecoli_images.zip)
+* [Tutorial 4: Quantitative Image Processing]({{ site.baseurl }}/code/t04_quantitative_image_processing.html) \| In this tutorial, you will learn some principles of computational image processing and more details about how we experimentally test our predictions regarding the fold-change in gene expression. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/ecoli_images.zip)
 
-* [Tutorial 5: Nonlinear Regression]({{ site.baseurl }}/code/t05_nonlinear_regression.html) \| One of the most useful skills any scientist can possess is a strong knowledge of statistics. Here, we will stick our toes in these waters by learning how to perform a nonlinear regression on a single parameter. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ross_fanelli_1958.csv)
+* [Tutorial 5: Nonlinear Regression]({{ site.baseurl }}/code/t05_nonlinear_regression.html) \| One of the most useful skills any scientist can possess is a strong knowledge of statistics. Here, we will stick our toes in these waters by learning how to perform a nonlinear regression on a single parameter. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/ross_fanelli_1958.csv)
 
 * [Tutorial 6: Integrating Master Equations]({{ site.baseurl }}/code/t06_chemical_master_equation.html) \| We advance our skills of performing numerical integration from tutorial two to consider the diffusion of particles over time and track their spatial distributions.
 
-* [Tutorial 7: Image Processing with Mouse Clicks]({{ site.baseurl }}/code/t07_clicking_image_analysis.html) \| Sometimes, writing code to do automated image analysis can be burdensome or impossible. In this tutorial shows you how you can use your mouse to mark positions of the cephalic furrow on images of *Drosophila* embryos. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/embryo_furrow.tif) 
+* [Tutorial 7: Image Processing with Mouse Clicks]({{ site.baseurl }}/code/t07_clicking_image_analysis.html) \| Sometimes, writing code to do automated image analysis can be burdensome or impossible. In this tutorial shows you how you can use your mouse to mark positions of the cephalic furrow on images of *Drosophila* embryos. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/embryo_furrow.tif)
 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
