--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -41,22 +41,22 @@ To submit a regrade, email the name of the assignment you would like regraded  t
 
 
 ## Assignments
- **[Homework 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw1_biogeography_solutions_Sp2017.pdf)
+ **[Homework 1](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)[\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw1_biogeography_solutions_Sp2017.pdf)
 
- **[Homework 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf)** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
-[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_Sp2017.pdf)[\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_jupyter_notebook_Sp2017.html)
+ **[Homework 2](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf)** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
+[\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_Sp2017.pdf)[\[jupyter notebook\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_jupyter_notebook_Sp2017.html)
 
 
- **[Homework 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solution_jupyter_notebook_Sp2017.html)
+ **[Homework 3](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solution_jupyter_notebook_Sp2017.html)
 
- **[Homework 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_code_solutions_Sp2017.html)
+ **[Homework 4](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_code_solutions_Sp2017.html)
 
- **[Homework 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw5_photosynthesis_solutions_Sp2017.pdf)
+ **[Homework 5](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw5_photosynthesis_solutions_Sp2017.pdf)
 
- **[Homework 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf)** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/RNAP_matrix.txt)[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw6_gene_regulation_1_solutions.pdf)
+ **[Homework 6](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf)** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/RNAP_matrix.txt)[\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw6_gene_regulation_1_solutions.pdf)
 
- **[Homework 7](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf)** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm [\[Garcia and Phillips 2011 data file\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacZ_titration_data.csv) [\[image data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
+ **[Homework 7](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf)** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm [\[Garcia and Phillips 2011 data file\]](http://rpdata.caltech.edu/courses/bi1_2017/data/lacZ_titration_data.csv) [\[image data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
 
-**[Homework 8](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf)** \| *The Body Plan*. Due June 1, 2017  by 1:00pm [\[images \]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/drosophila_data.zip) [\[Gregor et al. data\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/gregor_data.csv)
+**[Homework 8](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf)** \| *The Body Plan*. Due June 1, 2017  by 1:00pm [\[images \]](http://rpdata.caltech.edu/courses/bi1_2017/data/drosophila_data.zip) [\[Gregor et al. data\]](http://rpdata.caltech.edu/courses/bi1_2017/data/gregor_data.csv)
 
  **Homework 9** \| *Physical Limits*. Due June 8, 2017  by 1:00pm
