--- a/2017/_posts/2017-01-24-readings.md
+++ b/2017/_posts/2017-01-24-readings.md
@@ -60,7 +60,7 @@ the reintroduction of wolves to Yellowstone National Park. [\[PDF notes\]](http:
 Readings mentioned specifically in class will be listed here as the course progresses.
 
 
-{% assign readings = site.data.papers %}
+{% assign readings = site.data.2017.papers %}
 
 {% for week in readings %}
 <span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
