fix broken bare 2017 link

--- a/2017/_posts/2017-01-31-about.md
+++ b/2017/_posts/2017-01-31-about.md
@@ -3,7 +3,7 @@ layout: 2017_post
 title: About
 cover: about_blank.png
 categories: posts
-permalink: /2017/about
+permalink: /2017/index
 ---
 # Bi 1 - Principles of Biology
 
