regrade cleanup, add recitations

--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -11,18 +11,31 @@ permalink: /2023/index
 Biological processes take place at length scales ranging from that of individual protein molecules all the way to the algal blooms or rainforests that can be seen from space, and over a dizzying nearly 30 orders of magnitude in time scales. This course will start by examining the biology of processes such as how plants and animals colonize oceanic islands, and the physics of how animals such as wildebeest form giant herds during their year-long migration. With these wonders of the living world revealed, we will then seek to understand biological phenomena by thinking about genes and cells.
 
 ## Where and When?
-The course will be composed of two lecture sessions and one recitation per
-week. Occasionally, there will be a computational tutorial session in lieu of
-recitation.
+Each week will consist of two lectures, one recitation, and one computational tutorial. Office hours will also be held throughout. See the [policies page]({{ site.baseurl }}/policies) for general information, and the [schedule page]({{ site.baseurl }}/schedule) for details about content. 
 
-**Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:25pm in Baxter Lecture Hall
+Unless otherwise noted, all meetings will take place in [Chen 100](https://www.caltech.edu/map/campus/tianqiao-and-chrissy-chen-neuroscience-research-building). 
 
-**Recitations \|** [days]; [time] in [place]<br/>
+### Lectures
 
-**<span style="color: #fafbfc;">Recitations</span> \|** [days], [time] in [place]
+| Day | Time |
+| -- | -- |
+| Tuesday | 1:00pm - 2:25pm |
+| Thursday | 1:00pm - 2:25pm |
 
-## Office Hours
+### Recitations
 
-| Day | Time | Location | TA |
-|--| -- | -- | -- |
-| [day] | [time] | [place] | [instructor] |
+| Day | Time | TAs | Section Code |
+| -- | -- | -- | -- |
+| Monday | 9:00am - 9:55am | Adele & Kian | 01 |
+| Monday | 5:00pm - 5:55pm | Maggie & Rosalind | 02 |
+| Tuesday | 12:00pm - 12:55pm | Katelyn & Matticus | 03 |
+| Tuesday | 5:00pm - 5:55pm | Anna & Gabby | 04 |
+| Tuesday | 6:00pm - 6:55pm | Sam & Victor | 05 |
+| Wednesday | 9:00am - 9:55am | Makena & Maria | 06 |
+| Wednesday | 5:00pm - 5:55pm | Gabe & Maya | 07 |
+
+### Office Hours
+
+| Day | Time | TA | Location |
+| -- | -- | -- | -- |
+| tbd | tbd | tbd | tbd |
