--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -6,68 +6,52 @@ categories: posts
 permalink: /2023/policies
 ---
 
-## Meetings and Recitations
-Lecture occurs twice a week (Tuesdays and Thursdays) from 1:00 - 2:25 pm in the Baxter lecture hall. These sessions will involve lecture and in-class participation
-including back-of-the-envelope estimations, derivations, and natural
-philosophy. This course is designed to serve as an overview of some of the
-overarching principles of biological inquiry and address how biology fits in
-along physics, chemistry, mathematics, and engineering.
+## Course Meetings
 
-Recitation sessions are held once a week. These occur in the evening on
-Mondays through Thursdays and on Friday afternoons. These sessions are held
-with graduate and undergraduate teaching assistants and are designed to aid you
-on problem sets and further explain the topics covered in class.
+Classes are held twice a week and involve a mixture of lecture and active participation, including back-of-the-envelope estimations, derivations, and natural philosophy. The course is intended to serve as an introduction to the overarching principles of modern biological inquiry, with special attention to how they relate to physics, chemistry, mathematics, engineering, and computer science.
 
-Computational prowess is an incredibly useful skill in the modern biological
-era. Many homework problems will require you to write computer programs to
-execute  calculations, analyze experimental data, perform simulations, and
-more. No prior computer programming experience is required for this course. The
-TA's will host computational tutorial sessions five times during the course and
-will take place during normal recitation times and locations. While many programming
-languages are used in biology (R, C++, Java, Matlab, etc), Python will be the
-language of instruction for this course. Please see the [programming page]({{
-site.baseurl }}/programming) for instructions on setting up a scientific Python
-computing environment.
+Recitations are held once a week. These sessions are led by pairs of graduate and/or undergraduate TAs, and are designed to help guide your thinking on problem sets, and further explore topics introduced in class. Feel free to attend whichever is most convenient, within room capacity limits.
 
-## Grading, Attendance, and Electronic Devices
+Tutorials are also held once a week, hosted by the head TAs. Computational skills are increasingly important in the modern biological era; thus many homework problems will ask you to write code to perform calculations, simulations, and analyses. Since no prior programming experience is required for the course, these sessions are intended to help bring you up to speed with the week's relevant computational topics. See the [programming page]({{ site.baseurl }}/programming) for details.
 
-There will be no exams, quizzes, reports, or research proposals. Your entire grade comes from completing the homework. Homework is assigned on Thursdays and will be due the following Thursday at 1:00 pm. **Late homework submissions (submitted after 1:00 pm on the date due) will not be accepted without penalty.** For each day an assignment is late, a 10% deduction will be made from the maximum possible score, beginning immediately after your homework is due. This means that if your homework is handed in at 2:00 pm on the day it is due, your maximum possible score is 90%. A submission received four days late will maximally earn 50%. For exceptions, see "Absences, Extensions, and Ditch Day" below.
+## Attendance, Grading, and Electronic Devices
 
-Regular attendance is an expectation for all students in the class. As a general rule, "on time" means that you are sitting in the class room five minutes early.
+Regular attendance is an expectation for all students in the class. As a general rule, "on time" means that you are sitting in the classroom five minutes early.
+
+There will be no exams, quizzes, reports, or research proposals; your final grade is based on homework. Homework is assigned on Thursdays and is due the following Thursday before class. **Late homework submissions (submitted after 1:00 pm on the date due) will not be accepted without penalty.** For each day an assignment is late, 10% will be deducted from the maximum possible score, beginning immediately after the deadline. For example, if your submission is handed in at 2:00 pm on the Thursday it is due, your maximum possible score is 90%. A submission received four days late will maximally earn 50%. For exceptions, see "Absences, Extensions, and Ditch Day" below.
 
 You may use an electronic device (e.g. tablet, laptop) to take notes during class only if you use it for this purpose. We will ask you to turn off your electronic devices (or ask you to leave) if their use is off-topic or distracting to others.
 
 ## Homework Submissions
 
-To ensure proper grading, all homework must be submitted via email to `bi1.caltech@gmail.com` and adhere to the following conventions:
-- The subject of your email must have the following format: `[Homework #] Submission for Firstname Lastname`.
-- The submission must be a `.zip` file with the filename `lastname_firstname_hw#.zip`.
-  - This file should contain the text and/or code solutions to the assignment.
-  - For text solutions, include a PDF with the filename `lastname_firstname_hw#.pdf`. (Formats such as `.docx` and `.pages` will _not_ be accepted.)
-  - For code, include a Jupyter Notebook with the filename `lastname_firstname_hw#.ipynb`, along with any images used in the Notebook. If you write your entire homework in a Notebook, you do not need to submit a PDF as well.
+To ensure proper grading, all homework must be submitted via Gradescope and adhere to the following conventions:
+- For text solutions, submit a PDF with the filename `lastname_firstname_hw#.pdf`. This can be scanned handwritten work, but LaTeX is preferred.
+- For code solutions, submit a Jupyter Notebook with the filename `lastname_firstname_hw#.ipynb`, along with any images used in the Notebook. If you write your entire homework in a Notebook, you do not need to submit a PDF.
 
-For example, Barbara McClintock would submit her first homework set via an email with the subject `[Homework 1] Submission for Barbara McClintock`, with an attachment called `McClintock_Barbara_hw1.zip` containing the files `McClintock_Barbara_hw1.pdf`, `McClintock_Barbara_hw1.ipynb`, and any images used in her `.ipynb` document. 
+<!-- code submission gradescope template? make page selection req'd -->
 
-### Any submission that does not completely adhere to this format will not be graded.
+**Any submission that does not completely adhere to these requirements will not be graded.**
 
 ## Homework Regrades
 
 If you are interested in challenging the way your homework was graded, you may request a regrade. Regrades are subject to the following conditions:
-- You are limited to 2 regrade requests total over course of the term.
-- Each regrade request applies to one assignment. In other words, if you ask for a regrade, your entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel was not graded properly. Keep in mind that this could result in a net reduction in your grade on that particular assignment if your previous marks on other problems are adjusted.
-- Regrade requests may also be used for grading of homeworks that were submitted improperly.
+- Each regrade request applies to one assignment. In other words, if you ask for a regrade, the entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel was not graded properly. Keep in mind that this could result in a net reduction in your grade on that particular assignment, if your previous marks on other problems are adjusted.
+- Regrades may be used to resubmit improperly submitted assignments, but the late policy still applies.
+- Regrades are final.
 
-To request a regrade, email `bi1.caltech@gmail.com` with the following subject line:
+To request a regrade, email `bi1.caltech@gmail.com` with the subject line `[Homework #] Regrade Request for Firstname Lastname`. You may provide a description of any mistakes you feel were made in the body of the email.
 
-`[Homework #] Regrade Request for Firstname Lastname`
+<!-- use Gradescope feature except for resubmissions? or email straight to head TA? -->
 
 ## Collaboration Policy and the Honor Code
 
-Collaboration is imperative to scientific discovery. You may work with others on your homework assignments, but **all work handed in must be your own**. This means that you are not allowed to hand in work copy-pasted from those you worked with.
+You are expected to follow the [Caltech Honor Code](https://www.gradoffice.caltech.edu/current/hc) at all times. As a reminder, this states:
 
-For programming, please follow the [50 foot rule from
-CS11](http://courses.cms.caltech.edu/cs11/material/python/collab.html), which
-reads:
+> No member of the Caltech community shall take unfair advantage of any other member of the Caltech community.
+
+Collaboration is imperative to scientific discovery. You are encouraged to work together on homework assignments, but **all work handed in must be your own**. This means that you may not hand in work copy-pasted from those you worked with.
+
+For programming, please follow the [50 foot rule from CS11](http://courses.cms.caltech.edu/cs11/material/python/collab.html):
 
 > [...] If you help another student with their programming problems
 (including debugging), you must not consult your own code while doing so.
@@ -77,30 +61,18 @@ means that you may work with each other on programming problems but you may not
 copy others code directly. [...] **Help them with your brain, not with your
 code**.
 
-You may use resources on the internet, primary literature, or textbooks to help
-you answer questions, although you must provide a reference. You may not
-use previous homework questions or solutions from previous years of this course
-or others like it.
+You may use resources on the internet, primary literature, or textbooks to help you answer questions, although you must provide a reference. You may _not_ refer to homework questions or solutions from previous editions of this course or others like it.
 
-Finally, you must follow the [Caltech Honor Code](https://www.gradoffice.caltech.edu/current/hc) at all times. As a reminder, this states:
-
-> No member of the Caltech community shall take unfair advantage of any other member of the Caltech community.
-
-We have designed the computational sections to provide you with all of the
-information you need to complete the problems described in the homework. While
-you may use any of the code provided in the tutorials to solve your
-homework, please do not copy-paste it directly into your notebook. This is a good way to learn absolutely nothing. Instead, type out the code by hand and ensure you understand what each line actually does. Plus, we will often use different variable names or hardcoded values in tutorials that will be incompatible with your homework assignments.
+We have designed the tutorials to provide you with all of the information you need to complete the coding problems in the homework. While you may use any of the code provided in the tutorials to solve your homework, please do not just copy-paste it directly into your notebook. This is a good way to learn absolutely nothing. Instead, type it out by hand and ensure you understand what each line actually does.
 
 ## Communication
-You may contact the course TAs via email at any time, but please don't be spammy. In most cases, emailing _your_ TA is preferable to emailing a head TA, which is preferable to emailing Rob. Use your best judgment.
 
-<!-- The course [Piazza](http://piazza.com/caltech/spring2017/bi1) can be used for
-general questions. You may discuss homework and post public questions about
-problems, topics, or things of general interest to the Bi1 students and course
-staff. You may also post questions anonymously. The course TAs will monitor
-this page with regularity and will respond to valid inquiries. -->
+You may contact the TAs via email at any time, but please don't be spammy or rude. TAs are generally not expected to reply to emails outside of normal hours, although your TA may have different preferences. Remember that you are reaching out to another human!
+
+In most cases, emailing your section TA is preferable to emailing a head TA, which is preferable to emailing Rob. Use your best judgment.
 
 ## Absences, Extensions, and Ditch Day
+
 Homework extensions or absences will only be granted with an adequate reason (e.g. a note from a doctor or dean).
 
-In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended by two calendar days (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 1:00 pm). Any course meetings affected by Ditch Day will be resecheduled and posted on the [homepage]({{ site.baseurl }}/2023/index).
+In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended by two calendar days (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 1:00 pm). Any course meetings affected by Ditch Day will be rescheduled and posted on the [homepage]({{ site.baseurl }}/2023/index).
