fix table, heading style; final recs

--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -9,8 +9,7 @@ permalink: /2023/programming
 Many homework problems in this course will require you to write computer programs to solve them. No prior programming experience is needed for this course and all materials necessary to learn the required skills will be available through the course.
 
 ## Tutorials
-We will have several computational tutorials throughout the term. As the course
-progresses, these materials will be posted below. **Note:** *In some browsers (Firefox primarily), the end of each sentence is clipped off, making it difficult to read. If this is occurring, please try using another browser (Chrome, Safari, etc).*
+We will have several computational tutorials throughout the term. As the course progresses, these materials will be posted below.
 
 * [Tutorial 0a: Configuring your computer]({{ site.baseurl }}/code/t0a_setting_up_python.html) \| This tutorial will walk you through how to install a Python 3.6 scientific computing environment.
 
@@ -23,7 +22,6 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 * [Tutorial 2: Numerical Integration]({{ site.baseurl }}/code/t02_numerical_integration.html) \| Here, you will learn how to write your own Forward-Euler numerical integrator to  investigate radioactive decay.
 
 * [Tutorial 3: Stochastic Simulations]({{ site.baseurl }}/code/t03_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift.
-}}
 
 * [Tutorial 4: Quantitative Image Processing]({{ site.baseurl }}/code/t04_quantitative_image_processing.html) \| In this tutorial, you will learn some principles of computational image processing and more details about how we experimentally test our predictions regarding the fold-change in gene expression. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/ecoli_images.zip)
 
