--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -6,7 +6,7 @@ categories: posts
 permalink: /2023/homework
 ---
 
-Before submitting your homework, take a moment to familiarize yourself with the [guidelines for homework submissions]({{ site.baseurl }}/policies). **Any submission that does not completely adhere to this format will not be graded.**
+Before submitting your homework, take a moment to familiarize yourself with the [guidelines for homework submissions]({{ site.baseurl }}/2023/policies). **Any submission that does not completely adhere to this format will not be graded.**
  
 ## Assignments
 **[Homework 1](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Migrations.* (whales, wildebeest, hydrodynamics; **needs work**) Due x by 1:00 pm. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip) [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw1_biogeography_solutions_Sp2017.pdf)
