--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -12,7 +12,7 @@ Classes are held twice a week and involve a mixture of lecture and active partic
 
 Recitations are held once a week. These sessions are led by pairs of graduate and/or undergraduate TAs, and are designed to help guide your thinking on problem sets, and further explore topics introduced in class. Feel free to attend whichever is most convenient, within room capacity limits.
 
-Tutorials are also held once a week, hosted by the head TAs. Computational skills are increasingly important in the modern biological era; thus many homework problems will ask you to write code to perform calculations, simulations, and analyses. Since no prior programming experience is required for the course, these sessions are intended to help bring you up to speed with the week's relevant computational topics. See the [programming page]({{ site.baseurl }}/programming) for details.
+Tutorials are also held once a week, hosted by the head TAs. Computational skills are increasingly important in the modern biological era; thus many homework problems will ask you to write code to perform calculations, simulations, and analyses. Since no prior programming experience is required for the course, these sessions are intended to help bring you up to speed with the week's relevant computational topics. See the [programming page]({{ site.baseurl }}/2023/programming) for details.
 
 ## Attendance, Grading, and Electronic Devices
 
