font size constancy, blockquotes

--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -24,18 +24,16 @@ You may use an electronic device (e.g. tablet, laptop) to take notes during clas
 
 ## Homework Submissions
 
-To ensure proper grading, all homework must be submitted via Gradescope and adhere to the following conventions:
-- For text solutions, submit a PDF with the filename `lastname_firstname_hw#.pdf`. This can be scanned handwritten work, but LaTeX is preferred.
-- For code solutions, submit a Jupyter Notebook with the filename `lastname_firstname_hw#.ipynb`, along with any images used in the Notebook. If you write your entire homework in a Notebook, you do not need to submit a PDF.
-
-<!-- code submission gradescope template? make page selection req'd -->
+To ensure proper grading, all homework must be submitted in adherence to the following conventions:
+- For text solutions, submit a single PDF with the filename `lastname_firstname_hw#.pdf` to Gradescope. This can be scanned handwritten work, but LaTeX is preferred. Assign the pages corresponding to each problem when you do so.
+- For code solutions, submit a Jupyter Notebook with the filename `lastname_firstname_hw#.ipynb` to [TBD]. If you write your entire assignment in a Notebook, you do not need to submit a PDF.
 
 **Any submission that does not completely adhere to these requirements will not be graded.**
 
 ## Homework Regrades
 
 If you are interested in challenging the way your homework was graded, you may request a regrade. Regrades are subject to the following conditions:
-- Each regrade request applies to one assignment. In other words, if you ask for a regrade, the entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel was not graded properly. Keep in mind that this could result in a net reduction in your grade on that particular assignment, if your previous marks on other problems are adjusted.
+- Each regrade request applies to one assignment. In other words, if you ask for a regrade, the entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel was not graded properly. Keep in mind that this could result in a net reduction in your grade on that particular assignment.
 - Regrades may be used to resubmit improperly submitted assignments, but the late policy still applies.
 - Regrades are final.
 
@@ -47,19 +45,18 @@ To request a regrade, email `bi1.caltech@gmail.com` with the subject line `[Home
 
 You are expected to follow the [Caltech Honor Code](https://www.gradoffice.caltech.edu/current/hc) at all times. As a reminder, this states:
 
-> No member of the Caltech community shall take unfair advantage of any other member of the Caltech community.
+<blockquote>
+No member of the Caltech community shall take unfair advantage of any other member of the Caltech community.
+</blockquote>
 
 Collaboration is imperative to scientific discovery. You are encouraged to work together on homework assignments, but **all work handed in must be your own**. This means that you may not hand in work copy-pasted from those you worked with.
 
-For programming, please follow the [50 foot rule from CS11](http://courses.cms.caltech.edu/cs11/material/python/collab.html):
+For programming, please follow the [50-foot rule from CS11](http://courses.cms.caltech.edu/cs11/material/python/collab.html):
 
-> [...] If you help another student with their programming problems
-(including debugging), you must not consult your own code while doing so.
-Specifically, we ask that your own code be at least 50 feet away i.e. not
-visible to you or the person you are helping while you are helping them. This
-means that you may work with each other on programming problems but you may not
-copy others code directly. [...] **Help them with your brain, not with your
-code**.
+<blockquote>
+[...] If you help another student with their programming problems (including debugging), you must not consult your own code while doing so. Specifically, we ask that your own code be at least 50 feet away i.e. not
+visible to you or the person you are helping while you are helping them. This means that you may work with each other on programming problems but you may not copy others code directly. [...] Help them with your brain, not with your code.
+</blockquote>
 
 You may use resources on the internet, primary literature, or textbooks to help you answer questions, although you must provide a reference. You may _not_ refer to homework questions or solutions from previous editions of this course or others like it.
 
