fixed banner and text; start code page cleanup

--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -34,10 +34,8 @@ We will have several computational tutorials throughout the term. As the course 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
 
-* [BE/Bi/NB 203 : Programming in the Biological Sciences](http://justinbois.github.io/bootcamp/2016/)
+* [The Missing Semester of Your CS Education](https://missing.csail.mit.edu/), MIT
 
-* [Be/Bi 103 : Data Analysis in the Biological Sciences](http://www.bebi103.caltech.edu)
+* [BE/Bi/NB 203: Programming in the Biological Sciences](http://justinbois.github.io/bootcamp/2016/), Caltech
 
-* [CodeCademy course on Python](https://www.codecademy.com/learn/python)
-
-* [DataCamp course on Python for data science](https://www.datacamp.com/courses/intro-to-python-for-data-science)
+* [Be/Bi 103: Data Analysis in the Biological Sciences](http://www.bebi103.caltech.edu), Caltech
