add david section

--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -32,7 +32,7 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Tuesday | 5:00pm - 5:55pm | Anna & Gabby |
 | Tuesday | 6:00pm - 6:55pm | Sam & Victor |
 | Wednesday | 9:00am - 9:55am | Makena & Maria |
-| Wednesday | 5:00pm - 5:55pm | Gabe & Maya |
+| Wednesday | 5:00pm - 5:55pm | David, Gabe, & Maya |
 
 ### Office Hours
 
